Native/Test/KL/error-boolean-and-lvalue.kl
/*
 *  Copyright 2010-2012 Fabric Technologies Inc. All rights reserved.
 */

function foo( io Integer n )
{
  n = 42;
}

operator entry()
{
  var Integer a, b;
  a = 1;
  foo( a && b );
  report b;
}
